# Eindfeest-Spreydeweg

./: README.md  pyproject.toml
Eindfeest/src/eindfeest/: arduino_device.py  diode_experiment.py
