[tool.poetry]
name = "eindfeest"
version = "0.1.0"
description = ""
authors = ["M-spree <135598804+M-spree@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "eindfeest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
